--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
   .st3{fill:#999897;}
   .st4{font-family:'ArialMT';}
   .st5{font-size:55px;}
+  .st6{fill:#565656;}
+  .st7{fill:none;stroke:#4F5251;stroke-width:7;stroke-miterlimit:10;}
+  .st8{fill:#4F5251;}
+  .st9{fill:none;stroke:#4F5251;stroke-width:5;stroke-miterlimit:10;}
+  .st10{fill:#565656;stroke:#565656;stroke-miterlimit:10;}
+  .st11{fill:none;stroke:#565656;stroke-width:5;stroke-miterlimit:10;}
+  .st12{fill:#575757;}
+  .st13{fill:#565556;}
+  .st14{fill:#787778;}
+  .st15{fill:none;stroke:#737172;stroke-width:4;stroke-miterlimit:10;}
+  .st16{font-family:'Arial-Black';}
+  .st17{font-size:70px;}
 </style>
 <rect class="st0" width="2166.7" height="924.9"/>
 <path class="st1" d="M241.5,1.1v674.3H0v148.7h1539.7c0,0,397,18.9,627-152.9V501.5c0,0-302,179.5-625.9,179.5l-1177-4V0L241.5,1.1z
@@ -44,8 +56,65 @@
 <rect x="968.7" y="563.8" class="st1" width="72" height="141.1"/>
 <rect x="1787.1" y="531.8" class="st1" width="51.9" height="141.1"/>
 <text transform="matrix(1 0 0 1 514.6999 780.9495)" class="st3 st4 st5">VIA REAL</text>
-<text transform="matrix(4.489659e-11 -1 1 4.489659e-11 322.5412 504.18)" class="st3 st4 st5">MARK AVE</text>
+<text transform="matrix(4.489659e-11 -1 1 4.489659e-11 322.5413 504.1797)" class="st3 st4 st5">MARK AVE</text>
+<g>
+  <rect x="1553.9" y="156.8" class="st6" width="65" height="34.6"/>
+  <polygon class="st6" points="1607,174.1 1634.5,158.2 1634.5,190   "/>
+  <circle class="st6" cx="1571.9" cy="144.1" r="10.7"/>
+  <circle class="st6" cx="1598.4" cy="141.4" r="13.4"/>
+</g>
+<g>
+  <rect x="1520.9" y="459.6" class="st6" width="65" height="34.6"/>
+  <polygon class="st6" points="1574,476.9 1601.5,461 1601.5,492.7   "/>
+  <circle class="st6" cx="1538.9" cy="446.8" r="10.7"/>
+  <circle class="st6" cx="1565.4" cy="444.1" r="13.4"/>
+</g>
+<g>
+  <path class="st7" d="M1946.6,146.5c0-17.8,13.8-32.3,30.9-32.3s30.9,14.4,30.9,32.3"/>
+  <path class="st8" d="M1951.3,143.9c-6.1,0-11,4.9-11,11c0,6.1,4.9,11,11,11V143.9z"/>
+  <path class="st8" d="M2003.9,143.9c6.1,0,11,4.9,11,11c0,6.1-4.9,11-11,11V143.9z"/>
+  <path class="st8" d="M1955.5,166.3L1955.5,166.3c-1.1,0-2-0.9-2-2v-18.8c0-1.1,0.9-2,2-2l0,0c1.1,0,2,0.9,2,2v18.8
+    C1957.5,165.4,1956.6,166.3,1955.5,166.3z"/>
+  <path class="st8" d="M2000,166.3L2000,166.3c-1.1,0-2-0.9-2-2v-18.8c0-1.1,0.9-2,2-2l0,0c1.1,0,2,0.9,2,2v18.8
+    C2002,165.4,2001.1,166.3,2000,166.3z"/>
+  <path class="st9" d="M2011.7,156.9c4.9,8.6,2.3,19.5-6,24.2s-19,1.6-23.9-7"/>
+  <circle class="st8" cx="1981.7" cy="174.3" r="5.6"/>
+</g>
+<g>
+  <rect x="1196.1" y="153.7" class="st10" width="14" height="21.1"/>
+  <polygon class="st10" points="1196.1,164.2 1231.9,137.2 1231.9,191.2  "/>
+  <path class="st11" d="M1240.3,150.2c0,0,21.4,14.9,0,29.8"/>
+  <path class="st11" d="M1251.4,146.4c0,0,21.4,18.7,0,37.4"/>
+</g>
+<g>
+  <g>
+    <rect x="803" y="350.6" class="st12" width="5.8" height="52.9"/>
+    <ellipse class="st12" cx="805.9" cy="351.3" rx="7.7" ry="11.7"/>
+  </g>
+  <g>
+    <rect x="845.9" y="364.5" class="st12" width="7.5" height="38.8"/>
+    <path class="st12" d="M845,367.9v-31.7c0,0,13.3,8.1,9.1,31.7"/>
+  </g>
+  <g>
+    <rect x="825" y="356.6" class="st12" width="5.8" height="47"/>
+    <path class="st12" d="M833.1,338.8v14.6h-1.5v-14.7h-2.9v14.7h-1.5v-14.7h-2.9v14.7H823v-14.7c-1.3,0.2-2.3,1.3-2.3,2.6V357
+      c0,1.4,1.2,2.6,2.7,2.6h8.8c1.5,0,2.7-1.2,2.7-2.6v-15.7C835,340.1,834.2,339.1,833.1,338.8z"/>
+  </g>
+</g>
+<g>
+  <rect x="439.6" y="254" class="st12" width="71" height="38.3"/>
+  <ellipse class="st13" cx="475.3" cy="302.1" rx="11.5" ry="3.9"/>
+  <rect x="470.6" y="292.3" class="st14" width="9" height="9"/>
+  <path class="st15" d="M508.5,292.3h-66.6c-1.7,0-3-1.3-3-3v-32.6c0-1.7,1.3-3,3-3h66.6c1.7,0,3,1.3,3,3v32.6
+    C511.5,291,510.1,292.3,508.5,292.3z"/>
+</g>
+<g>
+  <polygon class="st12" points="1216.3,479.9 1252.1,464.1 1252.1,463.5 1179.5,463.5 1179.5,463.7  "/>
+  <polygon class="st12" points="1216.2,483.2 1216.2,483.1 1216.2,483.1 1179.5,467 1179.5,495.5 1252.1,495.5 1252.1,467.4  "/>
+</g>
+<text transform="matrix(1 0 0 1 90.4901 412.3573)" class="st12 st16 st17">$</text>
 </svg>
+
 
 
 <form id='buildings1'>
