Changed buildings2 option from just Pixel to Building 0

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <form id='buildings2'>
   <select class='dropdown' id='buildingNo'>
     <option value="blank">Building ?</option>
-    <option value="building0">Pixel</option>
+    <option value="building0">Building 0 'Pixel'</option>
     <option value="building1">Building 1</option>
     <option value="building2">Building 2</option>
     <option value="building3">Building 3</option>
